fix: Remove unused import and remove System.out.println statements